Sun Jan 19 10:20:32 2003  Gary Wong  <gtw@gnu.org>

	* renderprefs.c: #define M_PI, if necessary (reported by Nardy
	Pillards).

Sat Jan 18 23:14:56 2003  Gary Wong  <gtw@gnu.org>

	* renderprefs.c, renderprefs.h: New files.  Allow "set appearance"
	commands when GTK+ is not present.
	* gtkprefs.c: Modify rdAppearance settings.
	* gtkboard.c: Use rdAppearance settings.
	* gnubg.c (CommandSaveSettings): Save appearance settings when
	GTK+ is not present.
	* export.c (CommandExportPositionPNG): Allow user-defined renderdata.
	* htmlimages.c (CommandExportHTMLImages): Allow user-defined
	renderdata.
	
	* gtkgame.c (OptionsPages): Move some of the GUI-specific
	preferences here.
	* set.c (CommandSetGUIAnimationBlink, CommandSetGUIAnimationNone,
	CommandSetGUIAnimationSlide, CommandSetGUIAnimationSpeed,
	CommandSetGUIBeep, CommandSetGUIDiceArea, CommandSetGUIHighDieFirst,
	CommandSetGUIIllegal, CommandSetGUIShowIDs, CommandSetGUIShowPips):
	New functions.

	* analysis.h: add "extern" to a couple of declarations.

Sat Jan 18 16:18:39 2003  Gary Wong  <gtw@gnu.org>

	* render.c (RenderDice, RenderPips): Don't calculate specular
	component when cos_theta < 0.

Sat Jan 18 11:24:00 2003  Gary Wong  <gtw@gnu.org>

	* render.c (DrawChequers): Fix cosmetic bug with more than 3 chequers
	on bar (reported by Nardy Pillards).

Fri Jan 17 16:36:08 2003  Gary Wong  <gtw@gnu.org>

	* speed.c (CommandCalibrate): New function.  Measure evaluation speed,
	so (in future) we can estimate how long analysis/rollouts/etc. will
	take.
	* gtkgame.c (GTKShowCalibration): New function.
	* set.c (CommandSetCalibration): New function.
	* show.c (CommandShowCalibration): New function.
	
	* gtkgame.c (DeleteGame): Return TRUE, to stop GTK event propagation.

Fri Jan 17 12:52:49 2003  Gary Wong  <gtw@gnu.org>

	* gtkboard.c (board_quick_edit): Allow clicking on dice area to
	set dice (suggested by Nardy Pillards).
	(key_press): Make clicking on the label chequer set
	the appropriate player on roll.
